fix: add tests for some auth services
